gccida/g1/edivm
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/edivm/src/real.c:2879:26: error: use of undeclared identifier 'unk_963802'
while ( v2 != ( _WORD *)&unk_963802 ); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/edivm/src/real.c:2907:26: error: use of undeclared identifier 'unk_963802'
while ( v3 != ( _WORD *)&unk_963802 ); 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/edivm/src/obj/real.o] Error 1
